2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update regex used to find encodings for it to allow the encoding to
   be quoted, adding support for XML (closes #3183506).


2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Make 'Hide object files' preference configurable with file
   extensions.
 * plugins/filebrowser.c:
   Fix applying default setting for hide_object_files (oops).
   Fix warning when enabling plugin from the Plugin Manager.
 * plugins/filebrowser.c:
   Fix optimization for filter check when pattern is '*'.
   Use foreach_strv() instead of foreach_c_array().
 * plugins/filebrowser.c:
   Don't hide directories matching hidden file extensions e.g. foo.o.
   Refactor with check_object().


2011-03-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Use STYLE_MAX instead of 127 for editor_set_font(). This fixes a
   crash in the Split Window plugin when changing filetype (patch by
   Matthew Brush, thanks; fixes #3255968).
 * plugins/splitwindow.c:
   Update styles when the filetype changes (based on patch by
   Matthew Brush, thanks).
 * plugins/saveactions.c:
   Fix Instant Save preferences combo box filetype order.
 * plugins/filebrowser.c:
   Remove macro CHECK_READ_SETTING().


2011-03-30  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/plugindata.h, src/pluginprivate.h, src/plugins.c,
   src/pluginutils.c, src/pluginutils.h plugins/geanyfunctions.h:
   Add plugin_idle_add(), plugin_timeout_add() and
   plugin_timeout_add_seconds() to the plugin API. These are
   convenience wrappers to ensure the added timeouts are properly
   removed when unloading the plugin, preventing possible crashes.
 * plugins/splitwindow.c:
   Use new plugin_idle_add(), preventing an unlikely crash.
 * doc/pluginsymbols.c, src/sciwrappers.c:
   Fix a few Doxygen warnings.
 * plugins/saveactions.c:
   Properly use 0 as the invalid timeout source ID.